+ Checkboxes are changed to radio buttons in jsp file + Purging per predicate basis is complete now + A small bug is resolved when user wants to remove a bounded element + Some code cleanup, findbugs and checkstyle updates & formatting Refs: #17685